base parsing functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql = true
 
+spring.data.rest.basePath=/api
 spring.jackson.serialization.write-dates-as-timestamps = false
